fixes and notification work + order work
