# src/router/chef.js
@@ -5,7 +5,7 @@ const router = express.Router();
 
 router.route("/").get(isAuthenticated, isAdmin, chef.getAllChefs);
 router.route("/:id").get(isAuthenticated, isAdmin, chef.getChef);
-router.route("/mark-attendance").get(isAuthenticated, chef.markAttendance);
+router.route("/attendance/mark").get(isAuthenticated, chef.markAttendance);
 router.route("/low-stock/:mealId").get(isAuthenticated, chef.lowStock);
 router.route("/get-attendance/:userId").post(isAuthenticated, chef.getAttendance);
 
